--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,6 +1,6 @@
 <h1>current player : {{ player}}</h1>
 
-<button nbButton outline status="danger" (click)="newGame()">Start mew game</button>
+<button nbButton outline status="danger" (click)="newGame()">Start new game</button>
 
 
 <h2 *ngIf="winner">
