--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -1,10 +1,38 @@
 main {
+  padding: 50px;
   display: grid;
   grid-template-columns: 200px 200px 200px;
-  grid-gap: 5px;
+  grid-gap: 2px;
 }
 
 app-square {
-  border: 1px grey solid;
   height: 200px;
+}
+
+.plyer-board {
+  margin: auto;
+  width: 85%;
+}
+
+.gcen {
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 15px;
+  display: grid;
+  place-items: center;
+}
+
+.gcen:hover {
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 15px;
+  display: grid;
+  place-items: center;
+}
+
+.cenBtn {
+  display: grid;
+  place-items: center;
+}
+
+.cenInfo {
+  padding-bottom: 7px;
 }
